--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = coverage-clean, manifest, docs, py36, coverage-report
+envlist = coverage-clean, manifest, docs, py27, py36, coverage-report
 
 [testenv]
 commands = coverage run -p -m pytest --durations=20 tests {posargs}
