--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,15 @@ python:
     - 3.4
     - 3.6
 env:
-    - TOXENV=manifest
-    - TOXENV=docs
+  matrix:
     - TOXENV=py
+
+matrix:
+    include:
+        - python: 3.6
+          env: TOXENV=docs
+        - python: 3.6
+          env: TOXENV=manifest
 
 before_install:
     - pip install --upgrade pip
