--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ python:
     - 3.6
     - 3.5
     - 3.4
+    - 2.7
 
 env:
   matrix:
@@ -20,6 +21,8 @@ matrix:
           env: TOXENV=manifest
         - python: 3.6
           env: TOXENV=rst-lint
+    allow_failures:
+        - python: 2.7
 
 before_install:
     - pip install codecov
