--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-sqlalchemy
-requests
+sqlalchemy==1.1.14
+requests==2.18.4
 networkx==1.11
 pybel>=0.9.1
-click
-pandas
-scipy
-numpy
+click==6.7
+pandas==0.20.3
+scipy==0.19.1
+numpy==1.13.3
 artifactory
-jinja2
+jinja2==2.9.6
 ols_client==0.0.7
+configparser
+six==1.11.0
