--- a/tox.ini
+++ b/tox.ini
@@ -27,6 +27,7 @@ commands = coverage erase
 
 [testenv:manifest]
 deps = check-manifest
+skip_install = true
 commands = check-manifest
 
 [testenv:docs]
