--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ networkx==1.11
 pybel>=0.9.1
 click==6.7
 pandas==0.20.3
-scipy==0.19.1
-numpy==1.13.3
+scipy
+numpy
 artifactory
 jinja2==2.9.6
 ols_client==0.0.8
