Update travis configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ language: python
 
 python:
     - 3.6
-    - 3.5
 
 env:
   matrix:
@@ -13,12 +12,9 @@ env:
 
 matrix:
     include:
-        - python: 3.6
-          env: TOXENV=docs
-        - python: 3.6
-          env: TOXENV=manifest
-        - python: 3.6
-          env: TOXENV=rst-lint
+        - env: TOXENV=docs
+        - env: TOXENV=manifest
+        - env: TOXENV=rst-lint
 
 before_install:
     - pip install codecov
