--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -9,10 +9,4 @@ global-exclude docs/*
 global-exclude *.py[cod] __pycache__ *.so *.dylib .DS_Store
 
 exclude .bumpversion.cfg
-include *.rst *.txt LICENSE tox.ini *.yml docs/Makefile .coveragerc .codecov.yml .codeclimate.yml alembic.ini
-
-include Dockerfile
-global-exclude examples *.owl
-
-global-exclude alembic alembic/*
-global-exclude scripts scripts/*
+include *.rst *.txt LICENSE tox.ini *.yml docs/Makefile .coveragerc .codecov.yml .codeclimate.yml
