Update requirements and setup

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-sqlalchemy==1.1.15
-requests==2.18.4
-networkx==1.11
 pybel>=0.11.1
-click==6.7
 pandas==0.20.3
+ols_client>=0.0.8
+sqlalchemy
+requests
+networkx
+click
 scipy
 numpy
 artifactory
-jinja2==2.9.6
-ols_client>=0.0.8
-configparser
+jinja2
 tqdm
