Make networkx version explicit

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
 pybel>=0.11.1
 pandas==0.20.3
 ols_client>=0.0.8
+networkx==1.11
 sqlalchemy
 requests
-networkx
 click
 scipy
 numpy
-artifactory
 jinja2
 tqdm
