--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = coverage-clean, manifest, docs, py36, coverage-report, rst-lint
+envlist = coverage-clean, manifest, docs, py36, coverage-report, rst-lint, flake8, doc8, pylint
 
 [testenv]
 commands = coverage run -p -m pytest --durations=20 tests {posargs}
@@ -56,3 +56,87 @@ skip_install = true
 deps =
     restructuredtext_lint
     pygments
+
+[testenv:flake8]
+basepython = python3
+skip_install = true
+deps =
+    flake8
+    flake8-docstrings>=0.2.7
+    flake8-import-order>=0.9
+    pep8-naming
+    flake8-colors
+commands =
+    flake8 src/pybel_tools/ tests/ setup.py
+
+[flake8]
+ignore = E501
+exclude =
+    .tox,
+    .git,
+    __pycache__,
+    docs/source/conf.py,
+    build,
+    dist,
+    tests/fixtures/*,
+    *.pyc,
+    *.egg-info,
+    .cache,
+    .eggs
+max-complexity = 10
+import-order-style = google
+application-import-names = flake8
+format = ${cyan}%(path)s${reset}:${yellow_bold}%(row)d${reset}:${green_bold}%(col)d${reset}: ${red_bold}%(code)s${reset} %(text)s
+
+[testenv:pylint]
+basepython = python3
+deps =
+    pyflakes
+    pylint
+commands =
+    pylint src/pybel_tools
+
+[testenv:doc8]
+basepython = python3
+skip_install = true
+deps =
+    sphinx
+    doc8
+commands =
+    doc8 docs/source/
+
+[testenv:build]
+basepython = python3
+skip_install = true
+deps =
+    wheel
+    setuptools
+commands =
+    python setup.py -q sdist bdist_wheel
+
+[testenv:release]
+basepython = python3
+skip_install = true
+deps =
+    {[testenv:build]deps}
+    twine >= 1.5.0
+commands =
+    {[testenv:build]commands}
+    twine upload --skip-existing dist/*
+
+[testenv:finish]
+basepython = python3
+skip_install = true
+whitelist_externals =
+    /bin/git
+    /usr/local/bin/git
+deps =
+    {[testenv:build]deps}
+    {[testenv:release]deps}
+    bumpversion
+commands =
+    {[testenv:build]commands}
+    bumpversion release
+    {[testenv:release]commands}
+    git push
+    bumpversion patch
