--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -9,4 +9,4 @@ global-exclude docs/*
 global-exclude *.py[cod] __pycache__ *.so *.dylib .DS_Store
 
 exclude .bumpversion.cfg
-include *.rst *.txt LICENSE tox.ini *.yml docs/Makefile .coveragerc .codecov.yml .codeclimate.yml
+include *.rst *.txt *.ini *.yml LICENSE docs/Makefile .coveragerc .codecov.yml .codeclimate.yml .flake8
