Add bumpversion environment to tox

--- a/tox.ini
+++ b/tox.ini
@@ -113,6 +113,12 @@ deps =
 # Deployment tools #
 ####################
 
+[testenv:bumpversion]
+commands = bumpversion {posargs}
+skip_install = true
+deps =
+    bumpversion
+
 [testenv:build]
 basepython = python3
 skip_install = true
