--- a/tox.ini
+++ b/tox.ini
@@ -28,6 +28,7 @@ passenv =
 deps =
     coverage
     pytest
+    git+https://github.com/pybel/pybel.git
 whitelist_externals =
     /bin/cat
     /bin/cp
