--- a/tox.ini
+++ b/tox.ini
@@ -58,13 +58,25 @@ commands =
     flake8 src/pybel_tools/ tests/ setup.py
 description = Run the flake8 tool with several plugins (bandit, docstrings, import order, pep8 naming).
 
-[testenv:pylint]
-basepython = python3
+[testenv:vulture]
+deps = vulture
+skip_install = true
+commands = vulture src/pybel_tools/
+description = Run the vulture tool to look for dead code.
+
+[testenv:xenon]
+deps = xenon
+skip_install = true
+commands = xenon --max-average A --max-modules A --max-absolute B .
+description = Run the xenon tool to monitor code complexity.
+
+[testenv:pyroma]
 deps =
-    pyflakes
-    pylint
-commands =
-    pylint src/pybel_tools
+    pygments
+    pyroma
+skip_install = true
+commands = pyroma --min=10 .
+description = Run the pyroma tool to check the project's package friendliness.
 
 [testenv:doc8]
 basepython = python3
