--- a/tox.ini
+++ b/tox.ini
@@ -97,9 +97,8 @@ deps =
 
 [testenv:docs]
 changedir = docs
-deps =
-    sphinx
-    sphinx_rtd_theme
+extras =
+    docs
 commands =
     mkdir -p {envtmpdir}
     cp -r source {envtmpdir}/source
