Update to PyBEL v0.13 (#133)
* Update src/pybel_tools/summary/edge_summary.py

* Updates

Lots of stuff, lol

* Reorganize tests

* Update tox.ini

* Updates

* Refactor

* Excise bel_resources

* Update setup.cfg

[skip ci]

* Move notebook

* Update docs

* Update utils.py

* Update setup.cfg

* Remove deprecated module pybel_tools.filters.typing

* Fix typo

* Update travis and flake8

* Update .travis.yml

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,114 @@
-[bdist_wheel]
-universal = 0
-
+##########################
+# Setup.py Configuration #
+##########################
 [metadata]
+name = pybel_tools
+version = 0.7.1-dev
+description = A cool pool of tools for BEL
+long_description = file: README.rst
+
+# URLs associated with PyBEL-Tools
+url = https://github.com/pybel/pybel-tools
+download_url = https://github.com/pybel/pybel-tools/releases
+project_urls =
+    Bug Tracker = https://github.com/pybel/pybel-tools/issues
+    Source Code = https://github.com/pybel/pybel-tools
+    Documentation = https://pybel-tools.readthedocs.io
+
+# Author information
+author = Charles Tapley Hoyt
+author_email = charles.hoyt@scai.fraunhofer.de
+maintainer = Charles Tapley Hoyt
+maintainer_email = charles.hoyt@scai.fraunhofer.de
+
+# License Information
+license = Apache 2.0 License
 license_file = LICENSE
+
+# Search tags
+classifiers =
+    Development Status :: 1 - Planning
+    Intended Audience :: Developers
+    License :: OSI Approved :: Apache Software License
+    Operating System :: OS Independent
+    Programming Language :: Python
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3 :: Only
+    Topic :: Scientific/Engineering :: Bio-Informatics
+    Topic :: Scientific/Engineering :: Chemistry
+keywords =
+    Biological Expression Language
+    BEL
+    Networks Biology
+    Systems Biology
+
+[options]
+install_requires =
+    pybel>=0.13.0
+    pybel-artifactory
+    pybel-jupyter
+    pandas
+    networkx
+    requests
+    sqlalchemy
+    click
+    scipy
+    numpy
+    tqdm
+    bel_repository
+    bel_resources
+
+python_requires = >=3.6
+tests_require =
+    tox
+packages = find:
+package_dir =
+    = src
+zip_safe = true
+
+[options.packages.find]
+where = src
+
+[options.extras_require]
+docs =
+    sphinx
+    sphinx-rtd-theme
+    sphinx-click
+    sphinx-autodoc-typehints
+
+[options.entry_points]
+console_scripts =
+    pybel-tools = pybel_tools.cli:main
+
+######################
+# Doc8 Configuration #
+# (doc8.ini)         #
+######################
+[doc8]
+max-line-length = 120
+
+##########################
+# Coverage Configuration #
+# (.coveragerc)          #
+##########################
+[coverage:run]
+branch = True
+source = pybel-tools
+omit =
+    src/pybel_tools/__main__.py
+    src/pybel_tools/cli.py
+    tests/*
+    docs/*
+    scripts/*
+
+[coverage:paths]
+source =
+    src/pybel_tools
+    .tox/*/lib/python*/site-packages/pybel_tools
+
+[coverage:report]
+show_missing = True
+exclude_lines =
+    def __str__
+    def __repr__
