--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ cache: pip
 language: python
 
 python:
-    - 3.6
-    - 3.5
+  - 3.6
 
 stages:
   - lint
@@ -21,7 +20,6 @@ jobs:
     - stage: lint
       env: TOXENV=manifest
     - env: TOXENV=flake8
-    - env: TOXENV=vulture
     - env: TOXENV=xenon
     - env: TOXENV=pyroma
 
@@ -31,25 +29,32 @@ jobs:
     - env: TOXENV=readme
     - env: TOXENV=docs
 
+    # test stage
+    - stage: test
+      env: TOXENV=py
+      python: "3.6"
+    - env: TOXENV=py
+      sudo: true
+      python: "3.7"
+      dist: xenial
+
 matrix:
   allow_failures:
       - env: TOXENV=flake8
-      - env: TOXENV=vulture
       - env: TOXENV=xenon
-      - env: TOXENV=pylint
 
 before_install:
-    - pip install codecov coverage
+  - pip install codecov coverage
 
 install:
-    - pip install tox
+  - pip install tox
 
 script:
-    - tox
+  - tox
 
 after_success:
-    - tox -e coverage-report
-    - codecov
+  - tox -e coverage-report
+  - codecov
 
 notifications:
   slack: pybel:n2KbWKBum3musnBg3L76gGwq
