--- a/tox.ini
+++ b/tox.ini
@@ -9,8 +9,8 @@ envlist =
     coverage-clean
     # code linters/stylers
     manifest
+    pyroma
     #flake8
-    #pylint
     # documentation linters/checkers
     doc8
     readme
@@ -45,7 +45,6 @@ skip_install = true
 commands = check-manifest
 
 [testenv:flake8]
-basepython = python3
 skip_install = true
 deps =
     flake8
@@ -57,12 +56,6 @@ deps =
 commands =
     flake8 src/pybel_tools/ tests/ setup.py
 description = Run the flake8 tool with several plugins (bandit, docstrings, import order, pep8 naming).
-
-[testenv:vulture]
-deps = vulture
-skip_install = true
-commands = vulture src/pybel_tools/
-description = Run the vulture tool to look for dead code.
 
 [testenv:xenon]
 deps = xenon
@@ -79,7 +72,6 @@ commands = pyroma --min=10 .
 description = Run the pyroma tool to check the project's package friendliness.
 
 [testenv:doc8]
-basepython = python3
 skip_install = true
 deps =
     sphinx
@@ -114,13 +106,6 @@ commands =
     coverage combine
     coverage report
 
-[testenv:rst-lint]
-commands = rst-lint README.rst
-skip_install = true
-deps =
-    restructuredtext_lint
-    pygments
-
 ####################
 # Deployment tools #
 ####################
@@ -132,7 +117,6 @@ deps =
     bumpversion
 
 [testenv:build]
-basepython = python3
 skip_install = true
 deps =
     wheel
@@ -141,7 +125,6 @@ commands =
     python setup.py -q sdist bdist_wheel
 
 [testenv:release]
-basepython = python3
 skip_install = true
 deps =
     {[testenv:build]deps}
@@ -151,7 +134,6 @@ commands =
     twine upload --skip-existing dist/*
 
 [testenv:finish]
-basepython = python3
 skip_install = true
 whitelist_externals =
     /bin/git
