--- a/setup.cfg
+++ b/setup.cfg
@@ -45,19 +45,20 @@ keywords =
 
 [options]
 install_requires =
+    # PyBEL
     pybel>=0.13.0
-    pybel-artifactory
-    pybel-jupyter
-    pandas
-    networkx
-    requests
-    sqlalchemy
-    click
-    scipy
-    numpy
-    tqdm
     bel_repository
     bel_resources
+    # Utils
+    networkx
+    requests
+    click
+    sqlalchemy
+    tqdm
+    # Scientific Python
+    pandas
+    scipy
+    numpy
 
 python_requires = >=3.6
 tests_require =
