--- a/tox.ini
+++ b/tox.ini
@@ -91,6 +91,8 @@ deps =
 changedir = docs
 extras =
     docs
+    assembler-ideogram
+    assembler-html
 commands =
     mkdir -p {envtmpdir}
     cp -r source {envtmpdir}/source
