--- a/setup.cfg
+++ b/setup.cfg
@@ -77,6 +77,11 @@ docs =
     sphinx-rtd-theme
     sphinx-click
     sphinx-autodoc-typehints
+assembler-ideogram =
+    IPython
+    jinja2
+assembler-html =
+    jinja2
 
 [options.entry_points]
 console_scripts =
