Update documentation building

--- a/setup.cfg
+++ b/setup.cfg
@@ -77,10 +77,10 @@ docs =
     sphinx-rtd-theme
     sphinx-click
     sphinx-autodoc-typehints
-assembler-ideogram =
+assembler_ideogram =
     IPython
     jinja2
-assembler-html =
+assembler_html =
     jinja2
 
 [options.entry_points]
