--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,6 @@ passenv =
 deps =
     coverage
     pytest
-    git+https://github.com/pybel/pybel.git
 whitelist_externals =
     /bin/cat
     /bin/cp
@@ -91,8 +90,8 @@ deps =
 changedir = docs
 extras =
     docs
-    assembler-ideogram
-    assembler-html
+    assembler_ideogram
+    assembler_html
 commands =
     mkdir -p {envtmpdir}
     cp -r source {envtmpdir}/source
