--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -4,5 +4,5 @@ python:
   pip_install: true
   extra_requirements:
   - docs
-  - assembler-ideogram
-  - assembler-html
+  - assembler_ideogram
+  - assembler_html
