--- a/tox.ini
+++ b/tox.ini
@@ -114,6 +114,7 @@ commands =
 [testenv:bumpversion]
 commands = bumpversion {posargs}
 skip_install = true
+passenv = HOME
 deps =
     bumpversion
 
@@ -136,6 +137,7 @@ commands =
 
 [testenv:finish]
 skip_install = true
+passenv = HOME	
 whitelist_externals =
     /bin/git
     /usr/local/bin/git
