--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ##########################
 [metadata]
 name = pybel_tools
-version = 0.7.2
+version = 0.7.3-dev
 description = A cool pool of tools for BEL
 long_description = file: README.rst
 
