Code cleanup, documentation cleanup, change license
Update flake8, add more type hints, make version declarative, remove python 36 compatability

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -19,15 +19,11 @@ values =
 [bumpverion:part:build]
 values = [0-9A-Za-z-]+
 
-[bumpversion:file:setup.cfg]
-search = version = {current_version}
-replace = version = {new_version}
-
 [bumpversion:file:docs/source/conf.py]
 search = release = '{current_version}'
 replace = release = '{new_version}'
 
-[bumpversion:file:src/pybel_tools/constants.py]
+[bumpversion:file:src/pybel_tools/version.py]
 search = VERSION = '{current_version}'
 replace = VERSION = '{new_version}'
 
