--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ##########################
 [metadata]
 name = pybel_tools
-version = 0.7.4-dev
+version = attr: src.pybel_tools.version.VERSION
 description = A cool pool of tools for BEL
 long_description = file: README.rst
 
@@ -17,22 +17,21 @@ project_urls =
 
 # Author information
 author = Charles Tapley Hoyt
-author_email = charles.hoyt@scai.fraunhofer.de
+author_email = cthoyt@gmail.com
 maintainer = Charles Tapley Hoyt
-maintainer_email = charles.hoyt@scai.fraunhofer.de
+maintainer_email = cthoyt@gmail.com
 
 # License Information
-license = Apache 2.0 License
+license = MIT
 license_file = LICENSE
 
 # Search tags
 classifiers =
     Development Status :: 1 - Planning
     Intended Audience :: Developers
-    License :: OSI Approved :: Apache Software License
+    License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Programming Language :: Python
-    Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3 :: Only
     Topic :: Scientific/Engineering :: Bio-Informatics
@@ -60,7 +59,7 @@ install_requires =
     scipy
     numpy
 
-python_requires = >=3.6
+python_requires = >=3.7
 tests_require =
     tox
 packages = find:
@@ -83,10 +82,6 @@ assembler_ideogram =
 assembler_html =
     jinja2
 
-[options.entry_points]
-console_scripts =
-    pybel-tools = pybel_tools.cli:main
-
 ######################
 # Doc8 Configuration #
 # (doc8.ini)         #
@@ -102,8 +97,6 @@ max-line-length = 120
 branch = True
 source = pybel-tools
 omit =
-    src/pybel_tools/__main__.py
-    src/pybel_tools/cli.py
     tests/*
     docs/*
     scripts/*
