--- a/tox.ini
+++ b/tox.ini
@@ -52,6 +52,7 @@ deps =
     flake8-docstrings
     flake8-import-order
     pep8-naming
+    pydocstyle==3.0.0
 commands =
     flake8 src/pybel_tools/ tests/ setup.py
 description = Run the flake8 tool with several plugins (bandit, docstrings, import order, pep8 naming).
