--- a/setup.cfg
+++ b/setup.cfg
@@ -44,16 +44,16 @@ keywords =
 
 [options]
 install_requires =
-    # PyBEL
-    pybel>=0.13.0
-    bel_repository
-    bel_resources
-    # Utils
+    dataclasses-json
     networkx
     requests
     click
     sqlalchemy
     tqdm
+    # PyBEL
+    pybel>=0.13.0
+    bel_repository
+    bel_resources
     # Scientific Python
     pandas
     scipy
