--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,7 @@ envlist =
     py
     # always keep coverage-report last
     coverage-report
+
 [testenv]
 commands = coverage run -p -m pytest --durations=20 tests {posargs}
 passenv =
@@ -69,7 +70,7 @@ deps =
     pyroma
 skip_install = true
 commands = pyroma --min=10 .
-description = Run the pyroma tool to check the project's package friendliness.
+description = Run the pyroma tool to check the package friendliness of the project.
 
 [testenv:doc8]
 skip_install = true
