Add tests for html assemblers and pass flake8

--- a/setup.cfg
+++ b/setup.cfg
@@ -62,10 +62,12 @@ install_requires =
 python_requires = >=3.7
 tests_require =
     tox
+include_package_data = True
+zip_safe = true
+
 packages = find:
 package_dir =
     = src
-zip_safe = true
 
 [options.packages.find]
 where = src
@@ -79,6 +81,8 @@ docs =
 assembler_ideogram =
     IPython
     jinja2
+    bio2bel-hgnc
+    bio2bel-entrez
 assembler_html =
     jinja2
 
