--- a/tox.ini
+++ b/tox.ini
@@ -29,6 +29,9 @@ passenv =
 deps =
     coverage
     pytest
+extras =
+    assembler_ideogram
+    assembler_html
 whitelist_externals =
     /bin/cat
     /bin/cp
