--- a/setup.cfg
+++ b/setup.cfg
@@ -51,9 +51,9 @@ install_requires =
     sqlalchemy
     tqdm
     # PyBEL
-    pybel>=0.13.0
+    bel_resources>=0.0.3
+    pybel>=0.14.9,<0.15.0
     bel_repository
-    bel_resources
     # Scientific Python
     pandas
     scipy
