--- a/setup.cfg
+++ b/setup.cfg
@@ -52,7 +52,7 @@ install_requires =
     tqdm
     # PyBEL
     bel_resources>=0.0.3
-    pybel>=0.14.9,<0.15.0
+    pybel<0.16.0
     bel_repository
     # Scientific Python
     pandas
