--- a/setup.cfg
+++ b/setup.cfg
@@ -81,6 +81,7 @@ docs =
     sphinx-rtd-theme
     sphinx-click
     sphinx-autodoc-typehints
+    IPython
 assembler_ideogram =
     IPython
     jinja2
